--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.5",
     "@emotion/styled": "^11.11.5",
-    "@fullcalendar/daygrid": "^6.1.14",
     "@fullcalendar/core": "^6.1.14",
+    "@fullcalendar/daygrid": "^6.1.14",
     "@fullcalendar/interaction": "^6.1.14",
     "@fullcalendar/list": "^6.1.14",
     "@fullcalendar/react": "^6.1.14",
@@ -44,6 +44,7 @@
     "font-awesome": "^4.7.0",
     "formik": "^2.4.5",
     "history": "^4.10.1",
+    "html2canvas": "^1.4.1",
     "https-browserify": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "line-awesome": "^1.3.0",
